# karatex-explorations

./: CMDs.txt  README.md  requirements.txt  third-party-programs.txt
cpp/: CMakeLists.txt
cpp/src/: karate_multiview_frames_exporter.cpp
notebooks/: pose_comparison.ipynb
src/: karate_3d_reconstruction_final.py  karate_camera_pose_calculator.py  karate_clean_up_poses.py  karate_compare_2d.py  karate_compare_3d.py  karate_compare_3d_matrix.py  karate_multiview_frames_exporter.py  karate_pose_visualizer_debugger.py  karate_smooth_2d_annotation.py  karate_smoothing_interpolation_3d_points.py  karate_tracking_utility.py  karate_utilities.py
src/camera-calibration/: README.md  calibration_points.py  cameraCalibration.py  cameraCalibrationWithUndistortion.py  convert_tony_tool.py
src/camera-calibration/latest_version/: Karate_utilities.py  karate_3d_reconstruction_final.py  karate_camera_pose_calculator.py  karate_mutliview_frames_exporter.py  karate_pose_visualizer_debugger.py  karate_smoothing_interpolation.py  karate_tracking_utility.py  readme.txt
src/camera-calibration/pietro/: GeometryUtility.py  HelperFunctions.py  Karate_harris_corner.py  karate_3d_recon.py  karate_3d_recon_from_pose.py  karate_calib_data.py  karate_calib_data_test_display.py  karate_calib_xyz .py  karate_calib_xyz_updated.py  (+5 more)
src/legacy/: Karate_harris_corner.py  karate_calib__test_grid_xyz.py  karate_calib_data.py  karate_calib_data_test_display_new.py  karate_calib_xyz .py  karate_pose_from_calib.py  karate_reproj_tests.py  karate_reproj_tests_3D.py  karate_reproj_tests_3D_with_k4a.py
